# MouseClick

./: .gitignore  CMakeLists.txt  README.html  README.md  index.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report-template-🐞.md  bug-报告模板-🐞.md  new-feature-suggestion-🐚.md  新功能建议-🐚.md
MouseClick1.1.0/: MouseClick.pro  MouseClick.pro.user.361cb7c  MouseClick_zh_CN.ts  aboutinfo.cpp  aboutinfo.h  aboutinfo.ui  click.cpp  click.h  cretoolbar.cpp  cretoolbar.h  cretoolbar.ui  easyclick.cpp  easyclick.h  imgs.qrc  main.cpp  mainStyle.qss  mainwindow.cpp  mainwindow.h  mainwindow.ui  normalclick.cpp  normalclick.h  readme.md  style.qrc
assets/: assets.qrc
assets/fonts/SmileySans/: License
assets/qss/: dark-style.qss  light-style.qss
assets/qss/modules/: dark-mouseclickpage.qss  dark-settingspage.qss  light-messagebox.qss  light-mouseclickpage.qss  light-settingspage.qss  messagebox.qss
i18n/: MouseClick_en_US.ts  MouseClick_zh_CN.ts  MouseClick_zh_TW.ts
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/modules/: hotkeylineedit.cpp  hotkeylineedit.h  languageagent.cpp  languageagent.h  messagebox.cpp  messagebox.h  settingsagent.cpp  settingsagent.h  shared.cpp  shared.h  styleagent.cpp  styleagent.h
src/modules/nav_pages/: mouseclickpage.cpp  mouseclickpage.h  navpage.cpp  navpage.h  settingspage.cpp  settingspage.h
src/modules/qwk_windowtitlebar/: windowbar.cpp
src/qwk_window_bar/: windowbar.cpp  windowbutton.cpp
src/qwk_window_bar/private/: windowbar_p.h  windowbutton_p.h
src/utils/: clicker.cpp  clicker.h
